# rawgentic

./: .gitignore  .gitleaksignore  .rawgentic-plan-467.md  .rawgentic.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.rawgentic/: review-state.json
agents/: rawgentic-implementer.md  rawgentic-reviewer.md
diagrams/: framework-architecture.excalidraw  workflow-bug-fix.excalidraw  workflow-dependency-update.excalidraw  workflow-documentation.excalidraw  workflow-feature-implementation.excalidraw  workflow-incident-response.excalidraw  workflow-issue-creation.excalidraw  workflow-performance-optimization.excalidraw  workflow-refactoring.excalidraw  workflow-security-audit.excalidraw
docs/: .review-lane-smoke.md  2026-07-02-codex-compatibility-report.md  ci-review-lanes.md  codex-reliability.md  config-reference.md  consolidation.md  design-language-example.html  design-language-example.md  design-language.md  external-references.md  hermes-offload.md  index.html  memory-source-of-truth.md  model-routing.md  multi-issue-driver.md  principles.md  run-records.md  security-scan.md  session-notes.md  skill-development.md  testing.md  upgrade-3.0.md  wal-guide.md  workflow-diagram.html  workflow-diagram.md
hooks/: adversarial_review_lib.py  archive-notes.py  atomic_write_lib.py  bakeoff_policy.py  capabilities_lib.py  charter_lib.py  complexity_gate.py  diagram_seat_data.py  driver_bench_lib.py  driver_lib.py  executor_routing_lib.py  external_ref_lib.py  headless_interaction.py  headless_ssh_guard.py  hermes_bridge.py  hermes_policy.py  hooks.json  model_routing_lib.py  notes-size-handler.py  org_runners_lib.py  plan_lib.py  post_update_reconcile.py  query-archive.py  registry_prune.py  render_artifact.py  resume_lib.py  security-guard.py  (+23 more)
phase_executor/: README.md  pyproject.toml
phase_executor/src/phase_executor/: __init__.py  canary.py  canary_evidence.py  capture.py  contract.py  enforce.py  engine.py  ledger.py  model_capabilities.py  pane_runner.py  quota.py  quota_detect.py  registry.py  routing.py  supervisor.py  terminal_backend.py  worktree.py
phase_executor/src/phase_executor/adapters/: __init__.py  base.py  claude_cli.py  codex_cli.py  hermes_http.py  zhipuai_sdk.py
phase_executor/src/phase_executor/routing/: rawgentic.routing-table.json
phase_executor/src/phase_executor/schemas/: observation-1.schema.json  observation.schema.json  routing-table.schema.json
phase_executor/src/phase_executor/workers/: zhipuai_call.py
(+990 files in other folders)
